<resources>
    <string name="app_name">Assignment</string>
    <string name="Welcome">Chào mừng bạn đến với quản lí thu chi</string>

    <string name="khoangthu">Khoảng thu</string>
    <string name="khoangchi">Khoảng chi</string>
    <string name="thongke">Thống kê</string>
    <string name="gioithieu">Giới thiệu</string>
    <string name="thoat">Thoát</string>

    <string name="opendrawer">opendrawer</string>
    <string name="closedrawer">closedrawer</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="khoanthu">Khoản thu</string>
    <string name="loaithu">Loại thu</string>
    <string name="khoanchi">Khoản chi</string>
    <string name="loaichi">Loại chi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>